tests/test_assets/semantic/invalid/pointers/null_without_pointer_context.cog
test::() -> void {
    result := null == null;
}
