tests/test_assets/semantic/invalid/pointers/null_without_pointer_context.expected
semantic error at line 2: cannot compare null without a pointer type
1 semantic error generated.
